--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h3#slogan{
     line-height: 49px;
     text-align: center;
 }
-h3#contact{
+h3#soon{
     font-family: Montserrat;
     font-style: normal;
     font-weight: 600;
@@ -43,7 +43,7 @@ h3#contact{
 
 <h1>Casami</h1>
 <h3 id="slogan">moderne møbler til moderne hjem</h3>
-<h3 id="contact">info@casami.dk</h3>
+<h3 id="soon">Kommer i 2022</h3>
 
 </body>
 
